@@ -16,6 +16,7 @@ And don't add newlines before or after p tags because of transifex -->
 <li>New icons to show status of key (by Brennan Novak)</li>
 <li>Important bug fix: Importing of large key collections from a file is now possible</li>
 <li>Notification showing cached passphrases</li>
+<li>Keys are connected to Android's contacts</li>
 </ul>
 <p>This release wouldn't be possible without the work of Vincent Breitmoser (GSoC 2014), mar-v-in (GSoC 2014), Daniel Albert, Art O Cathain, Daniel Haß, Tim Bray, Thialfihar</p>
 
