@@ -8,6 +8,7 @@
 * New icons to show status of key (by Brennan Novak)
 * Important bug fix: Importing of large key collections from a file is now possible
 * Notification showing cached passphrases
+* Keys are connected to Android's contacts
 
 This release wouldn't be possible without the work of Vincent Breitmoser (GSoC 2014), mar-v-in (GSoC 2014), Daniel Albert, Art O Cathain, Daniel Haß, Tim Bray, Thialfihar
 
